# pysdl2-cffi

./: .hgignore  CHANGES.rst  README.rst  SConstruct  _sdl_paths.py  appveyor.yml  build.sh  cdefs.sh  filtercdefs.py  pyproject.toml  setup.cfg  setup.py
_sdl/: builder.py  cdefs.py  defines.h  dso.py  helpers.py  internal.py  lib.py  pixels.py  renamed.py  renamer.py  sdl.h  sdl204.h  structs.py
_sdl_gfx/: cdefs.py  renamed.py
_sdl_image/: builder.py  cdefs.py  dso.py  image.py  renamed.py
_sdl_mixer/: builder.py  cdefs.py  dso.py  helpers.py  lib.py  renamed.py
_sdl_ttf/: cdefs.py  renamed.py
bdist/: __init__.py
builder/: build_api.py  build_image.py  build_mixer.py  build_sdl.py  build_ttf.py  builder.py  detect_version.py  errorprone.py  handle_struct.py  nullable.py
docs/: SDL_ttf.rst  intro.rst
sdl/: __init__.py  image.py  mixer.py  ttf.py
tests/: loopwave.py  playmus.py  testaudioinfo.py  testdrawchessboard.py  testhotplug.py  testscale.py  teststruct.py  testttf.py  testviewport.py
