# Example build requirements folling build-deps-pep
[build-system]
requires = ["cffi", "enscons", "pycparser", "astor"]

[tool.enscons]
name="pysdl2-cffi"
version="0.10.0"
packages=['sdl', '_sdl', '_sdl_image', '_sdl_mixer', '_sdl_ttf']
description="SDL2 wrapper with cffi"
description_file="README.rst"
license="GPLv2+"
classifiers=[
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)"
]
keywords=["sdl", "cffi"]
author="Daniel Holth"
author_email="dholth@fastmail.fm"
url="https://bitbucket.org/dholth/pysdl2-cffi"

[tool.enscons.extras_require]
build = ['pycparser', 'astor', 'cffi>=1.6.0']
doc = ['sphinx']
":sys_platform=='win32'" = ["sdl2_lib"]
